--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -6,34 +6,49 @@
       <div class="col-lg-4 mx-auto">
         <h2 class="text-center mb-4">Registro</h2>
         <div class="auto-form-wrapper">
-          <form action="#">
+
+          <form [formGroup]="registerForm" (ngSubmit)="crearUsuario()">
+
             <div class="form-group">
               <div class="input-group">
-                <input type="email" class="form-control" placeholder="Correo" />
+                <input type="text" formControlName="nombre" class="form-control" placeholder="Nombre" />
                 <div class="input-group-append">
                   <span class="input-group-text">
-                    <i class="fa fa-check-circle"></i>
-                  </span>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group">
-                <input
-                  type="password"
-                  class="form-control"
-                  placeholder="Password"
-                />
-                <div class="input-group-append">
-                  <span class="input-group-text">
-                    <i class="fa fa-check-circle"></i>
+                    <i *ngIf="registerForm.get('nombre')!.valid" class="fa fa-check-circle"></i>
                   </span>
                 </div>
               </div>
             </div>
 
             <div class="form-group">
-              <button class="btn btn-primary submit-btn btn-block">
+              <div class="input-group">
+                <input type="email" formControlName="correo" class="form-control" placeholder="Correo" />
+                <div class="input-group-append">
+                  <span class="input-group-text">
+                    <i *ngIf="registerForm.get('correo')!.valid" class="fa fa-check-circle"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group">
+                <input
+                  type="password"
+                  formControlName="password"
+                  class="form-control"
+                  placeholder="Password"
+                />
+                <div class="input-group-append">
+                  <span class="input-group-text">
+                    <i *ngIf="registerForm.get('password')!.valid" class="fa fa-check-circle"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <button type="submit" [disabled]="registerForm.invalid" class="btn btn-primary submit-btn btn-block">
                 Crear cuenta
               </button>
             </div>
@@ -44,7 +59,9 @@
               <br />
               <a routerLink="/login" class="text-black text-small">Login</a>
             </div>
+
           </form>
+
         </div>
       </div>
     </div>
