--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -39,9 +39,18 @@
             </div>
 
             <div class="form-group">
-              <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary submit-btn btn-block">
+              <button type="submit" *ngIf="!isLoading; else loading" [disabled]="loginForm.invalid" class="btn btn-primary submit-btn btn-block">
                 Login
               </button>
+
+              <ng-template #loading>
+                <button type="button"
+                [disabled]="true"
+                class="btn btn-primary submit-btn btn-block">
+                <i class="fa fa-spin fa-sync"></i>
+                Espere...
+              </button>
+            </ng-template>
             </div>
 
             <div class="text-block text-center my-3">
