--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -48,9 +48,17 @@
             </div>
 
             <div class="form-group">
-              <button type="submit" [disabled]="registerForm.invalid" class="btn btn-primary submit-btn btn-block">
+              <button type="submit" *ngIf="!isLoading; else loading" [disabled]="registerForm.invalid" class="btn btn-primary submit-btn btn-block">
                 Crear cuenta
               </button>
+
+              <ng-template #loading>
+                <button type="button"
+                        [disabled]="true" 
+                        class="btn btn-primary submit-btn btn-block">
+                  Espere...
+                </button>
+              </ng-template>
             </div>
             <div class="text-block text-center my-3">
               <span class="text-small font-weight-semibold"
